--- a/meta/main.yml
+++ b/meta/main.yml
@@ -54,3 +54,5 @@ galaxy_info:
 dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
+
+allow_duplicates: true
