--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,6 +7,7 @@
     state: directory
     recurse: yes
   become: yes
+  tags: always
 
 - name: create facts
   template:
@@ -20,6 +21,7 @@
     path: /etc/ansible/facts.d
     state: directory
   become: yes
+  tags: always
 
 - name: delete rpi fact
   file:
@@ -32,7 +34,7 @@
     src: /etc/ansible/assemble_facts/{{ facts_name }}/ 
     dest: /etc/ansible/facts.d/{{ facts_name }}.fact
   become: yes
-  
+  tags: always
 
 - name: re-read facts
   setup: filter=ansible_local
